--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>smap</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
   <div id="container"></div>
