--- a/test/utils/remark-newpage-directive/fixtures/normal/output.html
+++ b/test/utils/remark-newpage-directive/fixtures/normal/output.html
@@ -1,9 +1,9 @@
-<div class="page"><h1>Heading 1-1</h1><h2>Headinng 2-1</h2><p>paragraph 1</p></div>
+<div><h1>Heading 1-1</h1><h2>Headinng 2-1</h2><p>paragraph 1</p></div>
 <!-- newpage -->
-<div class="page"><h2>Headinng 2-2</h2><p>paragraph 2</p></div>
+<div><h2>Headinng 2-2</h2><p>paragraph 2</p></div>
 <!-- newpage -->
-<div class="page"><h3>Heading 3-1</h3><p>paragraph 3</p></div>
+<div><h3>Heading 3-1</h3><p>paragraph 3</p></div>
 <!-- newpage -->
-<div class="page"><h3>Heading 3-2</h3><p>paragraph 4</p></div>
+<div><h3>Heading 3-2</h3><p>paragraph 4</p></div>
 <!-- newpage -->
-<div class="page"><h1>Heading 1-2</h1><p>paragraph 5</p><h2>Headinng 2-3</h2></div>
+<div><h1>Heading 1-2</h1><p>paragraph 5</p><h2>Headinng 2-3</h2></div>
