--- a/packages/remark-page-number-directive/src/__test__/fixtures/normal/output.html
+++ b/packages/remark-page-number-directive/src/__test__/fixtures/normal/output.html
@@ -1,9 +1,9 @@
-<div><h1>Heading 1</h1><span enable="false" class="" number="1">1</span></div>
+<div><!-- pageNumber enable=false --><h1>Heading 1</h1><span enable="false" class="" number="1">1</span></div>
 <!-- newpage -->
-<div><h2>Heading 2-1</h2><span enable="true" class="intro" number="2">2</span></div>
+<div><!-- pageNumber enable=false number=1 --><h2>Heading 2-1</h2><span enable="false" class="" number="1">1</span></div>
 <!-- newpage -->
-<div><h2>Heading 2-2</h2><ul>
+<div><!-- pageNumber enable className="intro" --><h2>Heading 2-2</h2><ul>
 <li>foo</li>
 <li>bar</li>
 <li>baz</li>
-</ul><span enable="true" class="" number="5">5</span></div>
+</ul><span enable="true" class="intro" number="2">2</span></div>
