--- a/packages/remark-insert-page-number/src/__test__/fixtures/optionsWithFrontmatter/output.html
+++ b/packages/remark-insert-page-number/src/__test__/fixtures/optionsWithFrontmatter/output.html
@@ -1,8 +1,8 @@
-<div><h1>Heading 1</h1><span enable="false" class="frontmatter options" number="3">3</span></div>
+<div class=""><h1>Heading 1</h1><span enable="false" class="frontmatter options" number="3">3</span></div>
 <!-- newpage -->
-<div><h2>Heading 2-1</h2><span enable="false" class="frontmatter options" number="4">4</span></div>
+<div class=""><h2>Heading 2-1</h2><span enable="false" class="frontmatter options" number="4">4</span></div>
 <!-- newpage -->
-<div><h2>Heading 2-2</h2><ul>
+<div class=""><h2>Heading 2-2</h2><ul>
 <li>foo</li>
 <li>bar</li>
 <li>baz</li>
