--- a/packages/remark-page-number-directive/src/__test__/fixtures/defaults/output.html
+++ b/packages/remark-page-number-directive/src/__test__/fixtures/defaults/output.html
@@ -1,8 +1,8 @@
-<div><!-- pageNumber enable=false --><h1>Heading 1</h1><span enable="false" class="pageNumber" number="2">2</span></div>
+<div class=""><!-- pageNumber enable=false --><h1>Heading 1</h1><span enable="false" class="pageNumber" number="2">2</span></div>
 <!-- newpage -->
-<div><!-- pageNumber number=1 --><h2>Heading 2-1</h2><span enable="true" class="pageNumber" number="1">1</span></div>
+<div class=""><!-- pageNumber number=1 --><h2>Heading 2-1</h2><span enable="true" class="pageNumber" number="1">1</span></div>
 <!-- newpage -->
-<div><!-- pageNumber className="intro" --><h2>Heading 2-2</h2><ul>
+<div class=""><!-- pageNumber className="intro" --><h2>Heading 2-2</h2><ul>
 <li>foo</li>
 <li>bar</li>
 <li>baz</li>
