--- a/packages/OHP/src/index.html
+++ b/packages/OHP/src/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title><%= htmlWebpackPlugin.options.title %></title>
   <style>
+    body {
+      margin: 0;
+    }
+
     .splash {
       width: 100vw;
       height: 100vh;
